# f1tenthpublic

./: F1tenth BOM 2018.xlsx  F1tenth BOM 2019.xlsx  README.md
Version 2.0/: Power_board_teensy V2.0.sch
Version 2.0/3dPrints/: WifiMount.thing  WifiMount2.makerbot  ZedMount.STL  ZedMount.makerbot  ZedMount2.STL  ZedMount2.thing
Version 2.0/BOMs/: Main BOM.xlsx  Power Board BOM.txt
Version 2.0/CADs/: ZedBaseMount.SLDPRT  ZedMount.SLDPRT  ZedTopMount.SLDPRT
Version 2.0/DWGs/: Chassis_Surfaced_MASTER.DWG  Chassis_Surfaced_MASTER.bak  Chassis_Surfaced_MASTER_holes.DWG  Chassis_Surfaced_MASTER_holes.bak  ZedBaseMount.DWG  ZedBaseMount.bak  ZedTopMount.DWG  ZedTopMount.bak  ZedTopMount2.DWG  ZedTopMount2.bak
beginner_tutorials/msg/: driveMessage.msg
chassis/: Camera_Base_Mount.SLDPRT  Camera_Mount.SLDPRT  Camera_Mount.STL  Chassis_Surfaced_MASTER.DWG  Chassis_Surfaced_MASTER_small_powerboard.DWG  Chassis_Surfaced_MASTER_small_powerboard.bak  Lidar_Mount_10LX.DWG  Lidar_Mount_10LX.SLDPRT  Lidar_Mount_10LX.STL  Lidar_Mount_30LX.DWG  Lidar_Mount_30LX.SLDPRT
chassis/3dPrints/: WifiMount.STL  WifiMount.makerbot  ZedMount2.makerbot
code/: README.md
code/Teensy Firmware/: README.txt  teensy_drive.ino
code/Week 1/Lab exercise/beginner_tutorials/: CMakeLists.txt
code/Week 1/Lab exercise/beginner_tutorials/msg/: Num.msg  driveCmd.msg
code/Week 1/Lab exercise/beginner_tutorials/src/: talkerim.cpp
code/Week 3/: tutorial.launch
code/beginner_tutorials/: package.xml
f1_tenth_sim/race/: package.xml
power-board-v2.0/: Power_board_V2.0_BOM.xlsx
(+96 files in other folders)
